<resources>
    <string name="app_name">Doa &amp; Dzikir</string>
    <string name="txt_judul_fitur">Kumpulan Doa &amp; Dzikir Sehari-Hari</string>
    <string name="txt_sunnah_qouliyah">Sunnah-Sunnah Qouliyah \nDzikir &amp; Doa Shalat</string>
    <string name="txt_dzikir_setiap_saat">Dzikir setiap saat</string>
    <string name="txt_dzikir_doa_harian">Dzikir &amp; Doa Harian</string>
    <string name="txt_dzikir_pagi_petang"><![CDATA[Dzikir Pagi & Petang]]></string>
    <string name="txt_artikel_islami">Artikel Islami</string>
    <string name="txt_dzikir_pagi">Dzikir Pagi</string>
    <string name="txt_dzikir_petang">Dzikir Petang</string>
    <string name="content_txt_icon_dzikir_pagi_petang">Icon Dzikir Pagi Petang</string>
    <string name="content_txt_icon_dzikir">Icon Dzikir</string>
    <string name="content_txt_icon_dzikir_setiap_saat">Icon Dzikir Setiap Saat</string>
    <string name="content_txt_icon_doa">Icon doa</string>
    <string name="content_image_poster_detail_artikel">Image Poster Detail Artikel</string>
    <string-array name="arr_img_artikel">
        <item>@drawable/artikel_1</item>
        <item>@drawable/artikel_2</item>
        <item>@drawable/artikel_3</item>
        <item>@drawable/artikel_4</item>
        <item>@drawable/artikel_5</item>
        <item>@drawable/artikel_6</item>
        <item>@drawable/artikel_1</item>
        <item>@drawable/bg_artikel</item>
    </string-array>
    <string-array name="arr_title_artikel">
        <item>Sedekah Adalah Bukti Keimanan</item>
        <item>Mengapa Tidak Semakin Mendekat Kepada Allah?</item>
        <item>Pentingnya Bahasa Arab</item>
        <item>FENOMENA FITNAH HARTA</item>
        <item>Islam Dan Problematika Agama &amp; Aqidah</item>
        <item>Tafsir Surat Al-Bayyinah</item>
        <item>Artikel 7 Artikel Artikel Artikel Artikel Artikel</item>
        <item>Artikel 8 Artikel Artikel Artikel Artikel Artikel</item>
    </string-array>
</resources>