<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/arabic_arihna"
        android:text="@string/app_name"
        android:textColor="@color/blue"
        android:textSize="34sp"
        android:textStyle="bold"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                android:layout_margin="16dp">

                <!--region View artikel-->
                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/vp_artikel"
                    android:layout_width="match_parent"
                    android:layout_height="200dp" />

            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:id="@+id/ll_slide_dots"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_dashboard_menu"
                android:padding="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/arabic_arihna"
                    android:text="@string/txt_judul_fitur"
                    android:textColor="@color/blue"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <LinearLayout
                    android:id="@+id/ll_dzikir_doa_shalat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/bg_item"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:contentDescription="@string/content_txt_icon_doa"
                        android:src="@drawable/ic_doa"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="16dp"
                        android:text="@string/txt_sunnah_qouliyah"
                        android:textColor="@color/blue"
                        android:textStyle="bold"
                        android:textSize="18sp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_dzikir_setiap_saat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/bg_item"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:contentDescription="@string/content_txt_icon_dzikir_setiap_saat"
                        android:src="@drawable/ic_time"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="16dp"
                        android:text="@string/txt_dzikir_setiap_saat"
                        android:textColor="@color/blue"
                        android:textStyle="bold"
                        android:textSize="18sp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_dzikir_doa_harian"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/bg_item"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:contentDescription="@string/content_txt_icon_dzikir"
                        android:src="@drawable/ic_dzikir"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="16dp"
                        android:text="@string/txt_dzikir_doa_harian"
                        android:textColor="@color/blue"
                        android:textStyle="bold"
                        android:textSize="18sp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_dzikir_pagi_petang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/bg_item"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:contentDescription="@string/content_txt_icon_dzikir_pagi_petang"
                        android:src="@drawable/ic_pagi_petang"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="16dp"
                        android:text="@string/txt_dzikir_pagi_petang"
                        android:textColor="@color/blue"
                        android:textStyle="bold"
                        android:textSize="18sp"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>