<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:scrollbars="none"
    tools:context=".activity.PagiPetangDzikirActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_dzikir_pagi_petang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_menu"
            android:gravity="bottom"
            android:padding="16dp"
            android:text="@string/txt_dzikir_pagi_petang"
            android:textColor="@color/blue"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_dzikir_pagi"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="32dp"
            app:cardCornerRadius="15dp"
            app:layout_constraintBottom_toTopOf="@+id/cv_dzikir_petang"
            app:layout_constraintEnd_toEndOf="@+id/txt_dzikir_pagi_petang"
            app:layout_constraintStart_toStartOf="@+id/txt_dzikir_pagi_petang"
            app:layout_constraintTop_toBottomOf="@+id/txt_dzikir_pagi_petang">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/pagi" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:padding="8dp"
                android:text="@string/txt_dzikir_pagi"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/img_btn_dzikir_pagi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/bg_btn_dzikir"
                tools:ignore="SpeakableTextPresentCheck" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_dzikir_petang"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="24dp"
            app:cardCornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/cv_dzikir_pagi"
            app:layout_constraintStart_toStartOf="@+id/cv_dzikir_pagi"
            app:layout_constraintTop_toBottomOf="@+id/cv_dzikir_pagi">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/petang" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:padding="8dp"
                android:text="@string/txt_dzikir_petang"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/img_btn_dzikir_petang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/bg_btn_dzikir"
                tools:ignore="SpeakableTextPresentCheck" />

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>